--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "firebase": "9.6.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^9.1.2",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
+    "redux": "^5.0.1",
+    "redux-log": "^2.0.0",
+    "redux-logger": "^3.0.6",
     "sass": "1.49.7",
+    "styled-components": "^6.1.8",
     "web-vitals": "2.1.4"
   },
   "scripts": {
