--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
     "@testing-library/jest-dom": "5.16.1",
     "@testing-library/react": "12.1.2",
     "@testing-library/user-event": "13.5.0",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "firebase": "9.6.6",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
     "redux": "^5.0.1",
     "redux-log": "^2.0.0",
     "redux-logger": "^3.0.6",
+    "reselect": "^5.1.1",
     "sass": "1.49.7",
     "styled-components": "^6.1.8",
     "web-vitals": "2.1.4"
